doc: update README.md & dev-guide.md